kube/services/netpolicy/gen3/services/argocd_netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-argocd
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - revproxy
      - cohort-middleware
      - wts
  ingress:
    - from:
      - ipBlock:
           cidr: 0.0.0.0/0
      ports:
         - port: 80
         - port: 4000
         - port: 8080
         - port: 81
         - port: 82
         - port: 443
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            app: argocd
  policyTypes:
   - Ingress
   - Egress
