kube/services/netpolicy/gen3/services/aws_es_proxy_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-aws-es-proxy
spec:
  podSelector:
    matchLabels:
      app: esproxy
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: arranger
      - podSelector:
          matchLabels:
            app: guppy
      - podSelector:
          matchLabels:
            app: spark
      - podSelector:
          matchLabels:
            app: tube
      - podSelector:
          matchLabels:
            app: arranger-dashboard
      ports:
         - port: 9200
  egress:
    - to:
      - ipBlock:
           cidr: 172.0.0.0/8
  policyTypes:
   - Ingress
   - Egress
