kube/services/netpolicy/gen3/services/funnel_mongodb_netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-funnel-mongodb-ingress
spec:
  podSelector:
    matchLabels:
      # TODO add label, e.g. "app=funnel-mongodb"
      app.kubernetes.io/name: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: funnel
      ports:
        - protocol: TCP
          port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-funnel-mongodb-egress
spec:
  podSelector:
    matchLabels:
      app: funnel
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              # TODO add label, e.g. "app=funnel-mongodb"
              app.kubernetes.io/name: mongodb
      ports:
        - protocol: TCP
          port: 27017
