kube/services/netpolicy/gen3/services/gen3job_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-gen3job
spec:
  podSelector:
    matchLabels:
      app: gen3job
  egress:
    - {}
  policyTypes:
   - Egress
