kube/services/netpolicy/gen3/services/indexd_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-indexd
spec:
  podSelector:
    matchLabels:
      app: indexd
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: indexd
      - podSelector:
          matchLabels:
             app: peregrine
      - podSelector:
          matchLabels:
             app: sheepdog
      - podSelector:
          matchLabels:
             app: revproxy
      - podSelector:
          matchLabels:
             app: fence
      - podSelector:
          matchLabels:
             app: fenceshib
      - podSelector:
          matchLabels:
             app: gen3job
      ports:
         - port: 80
         - port: 443
  policyTypes:
    - Ingress
