kube/services/netpolicy/gen3/services/jenkins_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-jenkins
spec:
  podSelector:
    matchLabels:
      app: jenkins
  ingress:
    - ports:
        - port: 80
        - port: 8080
        - port: 443
      from: []   
  policyTypes:
   - Ingress
   - Egress
