kube/services/netpolicy/gen3/services/peregrine_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-peregrine
spec:
  podSelector:
    matchLabels:
      app: peregrine
  ingress:
    - from:
      - podSelector:
          matchLabels:
             app: revproxy
      - podSelector:
          matchLabels:
             app: pidgin
      ports:
         - port: 80
         - port: 443

  policyTypes:
   - Ingress
