kube/services/netpolicy/gen3/services/redis_netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
      - podSelector:
          matchLabels:
             app: metadata
      ports:
         - port: 6379
  policyTypes:
   - Ingress
