kube/services/netpolicy/gen3/services/revproxy_netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-revproxy
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - revproxy
      - ambassador-gen3
      - auspice
      - ohdsi-atlas
      - ohdsi-webapi
      - superset
      - superset-worker
      - superset-redis-master
  ingress:
    - from:
      - ipBlock:
           cidr: 0.0.0.0/0
      ports:
         - port: 80
         - port: 4000
         - port: 8080
         - port: 81
         - port: 82
         - port: 443
         - port: 8088
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            app: prometheus
    - to: 
      - namespaceSelector:
          matchLabels:
            app: grafana
    - to: 
      - namespaceSelector:
          matchLabels:
            app: argo
    - to: 
      - namespaceSelector:
          matchLabels:
            app: argocd
    - to: 
      - namespaceSelector:
          matchLabels:
            app: prometheus
  policyTypes:
   - Ingress
   - Egress
