kube/services/netpolicy/gen3/services/sower_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-sowerjob
spec:
  spec:
  podSelector:
    matchLabels:
      app: sowerjob
  egress:
    - {}
  policyTypes:
   - Egress
