kube/services/netpolicy/gen3/services/ssjdispatcherjob_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-ssjdispatcherjob
spec:
  spec:
  podSelector:
    matchLabels:
      app: ssjdispatcherjob
  egress:
    - {}
  policyTypes:
   - Egress
